cores/argocd/base/ocean/httproute.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: argo-cd-argocd-server
spec:
  parentRefs:
    - name: global
      namespace: core-global
  hostnames:
    - PLACEHOLDER # Replaced later. Ref: `../../overlays/${environment}/httproute_patch.yaml` file
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: argo-cd-argocd-server
          port: 80
